# my-wheels

./: .gitignore  changelog.md
cpp/deep_learning/: CMakeLists.txt  build.bat  build.sh
cpp/deep_learning/include/deep_learning/: Function.hpp  SimplePerceptron.hpp
cpp/deep_learning/src/: Function.cpp  Main.cpp  SimplePerceptron.cpp
cpp/lib/include/math/: Function.hpp  Vector.hpp
cpp/math/: CMakeLists.txt  build.sh
cpp/math/include/math/: Function.hpp  Matrix.hpp  Vector.hpp
cpp/math/src/: Function.cpp
cpp/test/: CMakeLists.txt  Main.cpp  run.sh
